After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 731302 - gst_data_queue_new documentation is misleading
gst_data_queue_new documentation is misleading
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
unspecified
Other Linux
: Normal minor
: 1.3.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-06-05 23:58 UTC by Evan Nemerson
Modified: 2014-06-07 08:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
dataqueue: clear up documentation of gst_data_queue_new (1.17 KB, patch)
2014-06-05 23:58 UTC, Evan Nemerson
committed Details | Review

Description Evan Nemerson 2014-06-05 23:58:53 UTC
Created attachment 277978 [details] [review]
dataqueue: clear up documentation of gst_data_queue_new

The documentation for gst_data_queue_new leads the reader to believe that the value of the checkdata argument will only be passed to the checkfull callback, but it appears to be passed to all three callbacks.
Comment 1 Tim-Philipp Müller 2014-06-07 08:31:20 UTC
Pushed, thanks for the patch!

commit 75e0a3c676842227b602592b6f159c28f2c7e833
Author: Evan Nemerson <evan@nemerson.com>
Date:   Thu Jun 5 16:55:15 2014 -0700

    dataqueue: clear up documentation of gst_data_queue_new
    
    The gpointer argument is passed to all three callbacks, not just one.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=731302