dataqueue: clear up documentation of gst_data_queue_new

The gpointer argument is passed to all three callbacks, not just one.

https://bugzilla.gnome.org/show_bug.cgi?id=731302