libs/gst/base/gstdataqueue.c
@@ -214,7 +214,8 @@ gst_data_queue_init (GstDataQueue * queue)
  * or not.
  * @fullcallback: the callback which will be called when the queue is considered full.
  * @emptycallback: the callback which will be called when the queue is considered empty.
- * @checkdata: a #gpointer that will be given in the @checkfull callback.
+ * @checkdata: a #gpointer that will be passed to the @checkfull, @fullcallback,
+ *   and @emptycallback callbacks.
  *
  * Creates a new #GstDataQueue. The difference with @gst_data_queue_new is that it will
  * not emit the 'full' and 'empty' signals, but instead calling directly @fullcallback
